[package]
name = "newdoc"
version = "2.10.6"
description = "Generate pre-populated module files formatted with AsciiDoc that are used in Red Hat and Fedora documentation."
authors = ["Marek Suchánek <msuchane@redhat.com>"]
license = "GPL-3.0-or-later"
edition = "2021"
# Check the Rust version using `cargo msrv verify`.
rust-version = "1.57"
documentation = "https://docs.rs/newdoc"
readme = "README.md"
repository = "https://github.com/mrksu/newdoc"
categories = ["command-line-utilities", "text-processing"]
keywords = ["asciidoc", "documentation", "RedHat"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3", features = ["cargo"] }
regex = "1.6"
log = "0.4"
simplelog = "0.12"
askama = "0.11"
# Disable support for tracing_error and SpanTrace in eyre
color-eyre = { version = "0.6", default-features = false }
dialoguer = "0.10"
# Work around build issues with Copr:
libc = "=0.2.126"


[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
newdoc = { path = "/usr/bin/newdoc" }

[package.metadata.generate-rpm]
assets = [ { source = "target/release/newdoc", dest = "/usr/bin/newdoc", mode = "755" } ]

