[package]
name = "newdoc"
version = "2.18.2"
description = "Generate pre-populated module files formatted with AsciiDoc that are used in Red Hat and Fedora documentation."
authors = ["Marek Suchánek <msuchane@redhat.com>"]
license = "GPL-3.0-or-later"
edition = "2021"
# Check the Rust version using `cargo msrv verify`.
rust-version = "1.70"
documentation = "https://docs.rs/newdoc"
readme = "README.md"
repository = "https://github.com/redhat-documentation/newdoc/"
homepage = "https://redhat-documentation.github.io/newdoc/"
categories = ["command-line-utilities", "text-processing"]
keywords = ["asciidoc", "documentation", "RedHat"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bpaf = { version = "0.9", features = ["derive", "bright-color"]}
regex = "1.10"
log = "0.4"
simplelog = "0.12"
askama = "0.12"
# Disable support for tracing_error and SpanTrace in eyre
color-eyre = { version = "0.6", default-features = false }
dialoguer = "0.11"
time = "0.3"
directories = "5.0"
figment = { version = "0.10", features = ["toml"] }
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
bpaf = { version = "0.9", features = ["derive", "docgen"]}
time = "0.3"
serde = { version = "1.0", features = ["derive"] }
